fix queue and volume button alignment

--- a/client/sass/_room.scss
+++ b/client/sass/_room.scss
@@ -287,6 +287,10 @@ p {
   }
 }
 
+.vote--djQueue {
+  text-align: right;
+}
+
 .vote--djqueueBtn {
   position: relative;
   z-index: 100;
